Slide edge (ops.transform.edge_slide()) not responding to ALT + WHEEL to change reference edge in "even mode" #44634

Closed
opened 2015-05-07 23:06:44 +02:00 by Francesco · 11 comments

System Information
Lubuntu 15.04. ati r300

Blender Version
2.72b

As indicated in the title. Even mode works but I cannot change the reference edge (marked as yellow in UI). When I start slide edge from a different POV often a different edge is marked as reference, but still it can't be changed even with LEFT/RIGHT ARROW KEY.

Exact steps for others to reproduce the error
A cube subdivided twice -> select a loop (doesn't matter how long or where) -> use slide edge and press E.

**System Information** Lubuntu 15.04. ati r300 **Blender Version** 2.72b As indicated in the title. Even mode works but I cannot change the reference edge (marked as yellow in UI). When I start slide edge from a different POV often a different edge is marked as reference, but still it can't be changed even with LEFT/RIGHT ARROW KEY. **Exact steps for others to reproduce the error** A cube subdivided twice -> select a loop (doesn't matter how long or where) -> use slide edge and press E.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Francesco89

Added subscriber: @Francesco89
Author

Flipping the reference with F works though.

Flipping the reference with F works though.
Author

Tried in 2.74 000dfc0
Same thing

Tried in 2.74 000dfc0 Same thing

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed... Fix incoming.

Confirmed... Fix incoming.
Bastien Montagne self-assigned this 2015-05-08 10:26:09 +02:00

This issue was referenced by 9190d18b74

This issue was referenced by 9190d18b74fba4fc4134561e7a70190e12aeb045

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9190d18b74.

Closed by commit 9190d18b74.
Author

Thank you for your swift response!

Thank you for your swift response!

This issue was referenced by d2ddc4b33c0c1ffd7cd7b4ac5ebb6ba4d5d5378f

This issue was referenced by d2ddc4b33c0c1ffd7cd7b4ac5ebb6ba4d5d5378f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44634
No description provided.