Fix T44634: Slide edge not responding to ALT + WHEEL to change reference edge in "even mode".

Modal events (TFM_MODAL_EDGESLIDE_UP/_DOWN) were eaten by NOP generic transform event handling...